--- a/public/stats.html
+++ b/public/stats.html
@@ -38,6 +38,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="/api.js"></script>
+    <script src="/workout.js"></script>
     <script src="/stats.js"></script>
   </body>
 </html>
